fix the height of curriculum videos being cut off

--- a/css/earsketch/curriculum.less
+++ b/css/earsketch/curriculum.less
@@ -419,9 +419,7 @@ section[data-type="chapter"], nav[data-type="toc"], div[data-type="part"] {
 }
 
 .videoblock .content { 
-  position: relative; 
-  padding-bottom: 56.25%; 
-  height: 0; 
+  position: relative;
   overflow: hidden; 
 }
 
